--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build-native-linux2": "npm run build && node ./native-build-scripts/01-copy-files.js linux && cd temp && npm install --no-audit --production && cd .. && electron-builder --dir --x64 --linux appImage --publish never",
     "publish-native-win": "cross-env NODE_ENV=production npm run download-binaries-win && npm run build && node ./native-build-scripts/01-copy-files.js win && cd temp && npm install --no-audit --production && cd .. && electron-builder --win --publish always",
     "publish-native-mac": "cross-env NODE_ENV=production npm run download-binaries-mac && npm run build && node ./native-build-scripts/01-copy-files.js mac && cd temp && npm install --no-audit --production && cd .. && electron-builder --publish always",
-    "publish-native-linux": "cross-env NODE_ENV=production npm run download-binaries-linux npm run build && node ./native-build-scripts/01-copy-files.js linux && cd temp && npm install --no-audit --production && cd .. && electron-builder --publish always",
+    "publish-native-linux": "cross-env NODE_ENV=production npm run download-binaries-linux && npm run build && node ./native-build-scripts/01-copy-files.js linux && cd temp && npm install --no-audit --production && cd .. && electron-builder --publish always",
     "pack-native": "cross-env NODE_ENV=production npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --production && cd .. && electron-builder",
     "publish-native": "cross-env NODE_ENV=production npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --production && cd .. && electron-builder --publish always",
     "download-binaries": "npm run download-binaries-win && npm run download-binaries-linux && npm run download-binaries-mac",
